--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 click==8.1.3
-DateTime==4.7
 Flask==2.2.2
+Flask-Login==0.6.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 json5==0.9.10
 MarkupSafe==2.1.1
+passlib==1.7.4
 pytz==2022.2.1
 SQLAlchemy==1.4.41
 Werkzeug==2.2.2
