added npc description generator

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-DEFAULT_USERNAME=admin
-DEFAULT_PASSWORD=password
-DATABASE_NAME=database.db
-SECRET_KEY=Secret69_420Key!!
-DOMAIN_NAME=wayfarer.gg
+SECRET_KEY=""
+DEFAULT_USERNAME="admin"
+DEFAULT_PASSWORD="password"
+OPENAI_API_KEY=""
