--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
+aiohttp==3.8.5
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+blinker==1.6.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
 click==8.1.3
-Flask==2.2.3
+Flask==2.3.2
 Flask-Login==0.6.2
 Flask-SQLAlchemy==2.5.1
-greenlet==1.1.3
+frozenlist==1.4.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 json5==0.9.10
 MarkupSafe==2.1.1
+multidict==6.0.4
+openai==0.27.8
 passlib==1.7.4
+python-dotenv==1.0.0
 pytz==2022.2.1
+requests==2.31.0
 SQLAlchemy==1.4.41
-Werkzeug==2.2.3
+tqdm==4.65.0
+urllib3==2.0.4
+Werkzeug==2.3.6
+yarl==1.9.2
 zope.interface==5.4.0
