--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,92 @@
-aiohttp==3.8.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-annotated-types==0.5.0
-anyio==3.7.1
-async-timeout==4.0.2
-attrs==23.1.0
+aiodns==3.2.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.7.0
+attrs==24.2.0
 backoff==2.2.1
-blinker==1.6.2
-boto3==1.28.40
-botocore==1.31.75
-certifi==2023.7.22
-charset-normalizer==3.2.0
+bcrypt==4.2.1
+blinker==1.9.0
+boto3==1.35.81
+botocore==1.35.81
+Brotli==1.1.0
+certifi==2024.12.14
+cffi==1.17.1
+charset-normalizer==3.4.0
 click==8.1.7
-dnspython==2.4.2
-email-validator==2.0.0.post2
-fastapi==0.103.1
-Flask==3.0.0
+colorama==0.4.6
+cryptography==44.0.0
+distro==1.9.0
+dnspython==2.7.0
+email_validator==2.2.0
+fastapi==0.115.6
+fastapi-cli==0.0.6
+Flask==3.1.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
-frozenlist==1.4.0
-greenlet==2.0.2
+frozenlist==1.5.0
+greenlet==3.1.1
 h11==0.14.0
-httpcore==0.17.3
-httptools==0.6.0
-httpx==0.24.1
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+inquirerpy==0.3.4
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jiter==0.8.2
 jmespath==1.0.1
-json5==0.9.10
-MarkupSafe==2.1.1
-multidict==6.0.4
-openai==0.27.8
-orjson==3.9.5
-passlib==1.7.4
-Pillow==10.1.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+multidict==6.1.0
+openai==1.57.4
+orjson==3.10.12
+paramiko==3.5.0
+pfzy==0.3.4
+prettytable==3.12.0
+prompt_toolkit==3.0.48
+propcache==0.2.1
 py-cpuinfo==9.0.0
-pydantic==2.3.0
-pydantic-extra-types==2.1.0
-pydantic-settings==2.0.3
-pydantic_core==2.6.3
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-multipart==0.0.6
-pytz==2022.2.1
-PyYAML==6.0.1
-requests==2.31.0
-runpod==1.2.0
-s3transfer==0.6.2
-six==1.16.0
-sniffio==1.3.0
-SQLAlchemy==2.0.22
-starlette==0.27.0
-tomli==2.0.1
-tqdm==4.65.0
-tqdm-loggable==0.1.4
-typing_extensions==4.7.1
-ujson==5.8.0
-urllib3==2.0.7
-uvicorn==0.23.2
-uvloop==0.17.0
-watchfiles==0.20.0
-websockets==11.0.3
-Werkzeug==3.0.1
-yarl==1.9.2
-zope.interface==5.4.0
+pycares==4.5.0
+pycparser==2.22
+pydantic==2.10.3
+pydantic-extra-types==2.10.1
+pydantic-settings==2.7.0
+pydantic_core==2.27.1
+Pygments==2.18.0
+PyNaCl==1.5.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.19
+PyYAML==6.0.2
+requests==2.32.3
+rich==13.9.4
+rich-toolkit==0.12.0
+runpod==1.7.7
+s3transfer==0.10.4
+setuptools==69.5.1
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.41.3
+tomli==2.2.1
+tomlkit==0.13.2
+tqdm==4.67.1
+tqdm-loggable==0.2
+typer==0.15.1
+typing_extensions==4.12.2
+ujson==5.10.0
+urllib3==2.2.3
+uvicorn==0.33.0
+uvloop==0.21.0
+watchdog==6.0.0
+watchfiles==1.0.3
+wcwidth==0.2.13
+websockets==14.1
+Werkzeug==3.1.3
+wheel==0.43.0
+yarl==1.18.3
